fix: relative urls in app

--- a/app/index.html
+++ b/app/index.html
@@ -120,8 +120,8 @@
     </div>
   </div>
   <script type="module">
-    import ScatterGL from "../dist/index.js";
-    import { data, color } from './app/data.js';
+    import ScatterGL from "./index.js";
+    import { data, color } from './data.js';
 
     let plot = new ScatterGL(".canvas");
     plot.setInput(data);
